--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Buenos dias, mi nombre es Juan Maldonado
-esta es mi prueba de habilidad para el cargo de desarrollador para su empresa.
-He agregado un modal y editado un "div" con la clase "annual-model-box" colocando mi nombre en dicha edicion "Juanmaldonado".
-Espero poder tener la oportunidad de laborar en esta gran empresa. 
+Buenos dias, mi nombre es Juan Maldonadoesta es mi prueba de habilidad para el cargo de desarrollador para su empresa.
+He agregado un modal y editado un "div" con la clase "annual-model-box" colocando mi nombre en dicha edicion "Juanmaldonado", 
+también agrege lineas de javascript para poder hacer funcionar las clases con ejecuciones de dichos javascripts.
+Espero poder tener la oportunidad de laborar en esta gran empresa.
